Introduce structured error handling and custom exceptions for authentication, user, project, and chat modules